--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -1,35 +1,31 @@
-version: '3.1'
-
-services:
-  drupal:
-    container_name: drupal
-    image: drupal
-    ports:
-      - "80:80"
-    volumes:
-      - drupal_modules:/var/www/html/modules
-      - drupal_profiles:/var/www/html/profiles
-      - drupal_themes:/var/www/html/themes
-      - drupal_sites:/var/www/html/sites
-    networks:
-      - drupal_net
-
-  postgres:
-    container_name: psql
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: awais123
-    volumes:
-      - psql_data:/var/lib/postgresql/data
-    networks:
-      - drupal_net
-
-volumes:
-  drupal_modules:
-  drupal_profiles:
-  drupal_themes:
-  drupal_sites:
-  psql_data:
+version: '3.8'
 
 networks:
-  drupal_net:
+  drupal:
+    driver: bridge
+
+services:
+  postgres:
+    image: postgres:13
+    restart: always
+    environment:
+      POSTGRES_DB: drupal
+      POSTGRES_USER: drupaluser
+      POSTGRES_PASSWORD: drupalpass
+    networks:
+      - drupal
+
+  drupal:
+    image: drupal:9-apache
+    ports:
+      - "8080:80"
+    depends_on:
+      - postgres
+    environment:
+      DRUPAL_DB_HOST: postgres
+      DRUPAL_DB_USER: drupaluser
+      DRUPAL_DB_PASSWORD: drupalpass
+      DRUPAL_DB_NAME: drupal
+    networks:
+      - drupal
+
